--- a/EduardoBotv2.Core/EduardoBotv2.Core.csproj
+++ b/EduardoBotv2.Core/EduardoBotv2.Core.csproj
@@ -9,6 +9,10 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Discord.Net" Version="2.0.1" />
     <PackageReference Include="Google.Apis.Urlshortener.v1" Version="1.38.0.138" />
