Add Spotify api and artists command

--- a/EduardoBotv2.Core/EduardoBotv2.Core.csproj
+++ b/EduardoBotv2.Core/EduardoBotv2.Core.csproj
@@ -25,6 +25,8 @@
     <PackageReference Include="RedditSharp" Version="2.0.0-CI00075" />
     <PackageReference Include="SixLabors.ImageSharp" Version="1.0.0-beta0006" />
     <PackageReference Include="SixLabors.ImageSharp.Drawing" Version="1.0.0-beta0006" />
+    <PackageReference Include="SpotifyAPI.Web" Version="3.1.2" />
+    <PackageReference Include="SpotifyAPI.Web.Auth" Version="3.1.2" />
   </ItemGroup>
 
 </Project>
