--- a/EduardoBotv2/EduardoBotv2.csproj
+++ b/EduardoBotv2/EduardoBotv2.csproj
@@ -26,6 +26,9 @@
     <None Update="data\pokemon.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="data\pubg.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="ffmpeg.exe">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
