Add guild join / leave handling
Also:
- Remove GitHub module
- Update logger
- Update YoutubeExplode package to fix issue with youtube api change

--- a/EduardoBotv2.Core/EduardoBotv2.Core.csproj
+++ b/EduardoBotv2.Core/EduardoBotv2.Core.csproj
@@ -15,14 +15,13 @@
 
   <ItemGroup>
     <PackageReference Include="Discord.Net" Version="2.0.1" />
-    <PackageReference Include="Google.Apis.Urlshortener.v1" Version="1.38.0.138" />
-    <PackageReference Include="Google.Apis.YouTube.v3" Version="1.38.0.1488" />
-    <PackageReference Include="HtmlAgilityPack" Version="1.11.1" />
+    <PackageReference Include="Google.Apis.Urlshortener.v1" Version="1.38.2.138" />
+    <PackageReference Include="Google.Apis.YouTube.v3" Version="1.38.2.1565" />
+    <PackageReference Include="HtmlAgilityPack" Version="1.11.3" />
     <PackageReference Include="Imgur.API" Version="5.0.0-beta1" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.2.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
-    <PackageReference Include="Octokit" Version="0.32.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     <PackageReference Include="Pubg-DotNet" Version="2.2.0" />
     <PackageReference Include="RedditSharp" Version="2.0.0-CI00075" />
     <PackageReference Include="SixLabors.ImageSharp" Version="1.0.0-beta0006" />
@@ -30,7 +29,7 @@
     <PackageReference Include="SpotifyAPI.Web" Version="4.0.0" />
     <PackageReference Include="SpotifyAPI.Web.Auth" Version="4.0.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.6.0" />
-    <PackageReference Include="YoutubeExplode" Version="4.6.8" />
+    <PackageReference Include="YoutubeExplode" Version="4.7.0-alpha" />
   </ItemGroup>
 
 </Project>
